* Fix popup button's border cutoffs in IE.

--- a/nlw/share/skin/s3/css/screen.css
+++ b/nlw/share/skin/s3/css/screen.css
@@ -4604,7 +4604,6 @@ ul.dropdownOptions li.disabled a:hover {
 .wikilinkPopup .buttons,
 .weblinkPopup .buttons {
     padding: 3px;
-    height: 22px;
     text-align: right;
 }
 
